--- a/notebooks/scRNAseq/01_qc_filtering.ipynb
+++ b/notebooks/scRNAseq/01_qc_filtering.ipynb
@@ -7,13 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tryCatch({\n",
-    "#   source(\"here::here(\"/scratch_isilon/groups/singlecell/pnieto/scripts/r_utils/utils.R\")\")\n",
-    "# }, error = function(e) {\n",
-    "#   source(\"here::here(\"S:/scripts/r_utils/utils.R\")\")\n",
-    "# })\n",
-    "\n",
-    "source(\"here::here(\"S:/scripts/r_utils/utils.R\")\")\n"
+    "# source utils code which loads libraries, functions and color palette\n",
+    "source(here::here(\"code\", \"utils.R\"))\n",
+    "proj_name <- \"CSF\""
    ]
   },
   {
@@ -23,31 +19,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define relevant folders to load/save data\n",
+    "proj_dir <- here::here()\n",
+    "out_dir <- here::here(\"01_qc_filtering\", \"output\")\n",
+    "\n",
     "# create output folder if it doesn't exist yet\n",
-    "if (!file.exists(params$out_dir)) {\n",
-    "  dir.create(params$out_dir, recursive = TRUE)\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cebc58ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cat(\"All parameters passed to render this file:\", \"\\n\")\n",
-    "t <- lapply(1:length(params), function(x){\n",
-    "  cat(paste0(names(params[x]), \": \" , params[[x]]), \"\\n\")\n",
-    "})\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "37b61166",
-   "metadata": {},
-   "source": [
-    "`r glue::glue(\"# {params$proj_name}\")`\n"
+    "if (!file.exists(out_dir)) {\n",
+    "  dir.create(out_dir, recursive = TRUE)\n",
+    "}"
    ]
   },
   {
@@ -84,26 +63,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50d8ef9e",
-   "metadata": {},
-   "source": [
-    "- *doublet_score* is the score that a cell might be a doublet, instead of a single cell\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ad87036c",
    "metadata": {},
    "source": [
-    "Low number of genes or RNA molecules for a cell indicates that it may be dead or an empty droplet. On the contrary, cells with high number of genes or molecules indicate that the \"cell\" may in fact be a doublet (or multiplet). Cells with high mitochondrial content may also be dead or broken cells as the mitochondrial material is the last to degrade.\n"
+    "Low number of genes or RNA molecules for a cell indicates that it may be dead or an empty droplet. On the contrary, cells with high number of genes or molecules indicate that the \"cell\" may in fact be a doublet (or multiplet). Cells with high mitochondrial content may also be dead or broken cells as the mitochondrial material is the last to degrade.\n",
+    "By removing outliers from these groups we expect to remove most bad quality cells from the downstream analysis. However, we won't be very stringent here, as we can further remove bad quality cells during downstream analysis."
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "30eb2003",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cebc58ba",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "By removing outliers from these groups we expect to remove most bad quality cells from the downstream analysis. However, we won't be very stringent here, as we can further remove bad quality cells during downstream analysis."
+    "# set filtering thresholds\n",
+    "min_lib_size <- 100\n",
+    "max_lib_size <- 5000\n",
+    "min_n_genes <- 100\n",
+    "max_n_genes <- 1500\n",
+    "max_pct_mt <- 20"
    ]
   },
   {
@@ -114,28 +93,16 @@
    "outputs": [],
    "source": [
     "\n",
-    "library <- list.dirs(path = glue::glue(\"{params$proj_dir}/jobs\"), full.names = FALSE, recursive = FALSE)\n",
+    "library <- list.dirs(path = here::here(\"raw_data\", \"scRNAseq\", \"jobs\"), full.names = FALSE, recursive = FALSE)\n",
     "\n",
     "obj_list <- purrr::map(library, function(lib){\n",
-    "  rna <- glue::glue(\"{params$proj_dir}/jobs/{lib}/{lib}/outs/per_sample_outs/{lib}/count/sample_filtered_feature_bc_matrix/\") \n",
+    "  rna <- here::here(\"raw_data\", \"scRNAseq\", \"jobs\", lib, lib, \"outs\", \"per_sample_outs\", lib, \"count\", \"sample_filtered_feature_bc_matrix\")\n",
     "  print(rna)\n",
-    "  tcr <- glue::glue(\"{params$proj_dir}/jobs/{lib}/{lib}/outs/per_sample_outs/{lib}/vdj_t/\")\n",
+    "  tcr <- here::here(\"raw_data\", \"scRNAseq\", \"jobs\", lib, lib, \"outs\", \"per_sample_outs\", lib, \"vdj_t\")\n",
     "  print(tcr)\n",
-    "  bcr <- glue::glue(\"{params$proj_dir}/jobs/{lib}/{lib}/outs/per_sample_outs/{lib}/vdj_b/\")\n",
-    "  print(bcr)\n",
-    "  load_seurat(gex_dir = rna, tcr_dir = NULL, bcr_dir = NULL, project = params$proj_name, sample = lib, sp = \"H\")\n",
+    "    load_seurat(gex_dir = rna, tcr_dir = tcr, bcr_dir = NULL, project = proj_name, sample = lib, sp = \"H\")\n",
     "})\n",
-    "saveRDS(obj_list, glue::glue(\"{params$out_dir}/{params$proj_name}_raw_obj_list.rds\"))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5bb02aac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "obj_list <- readRDS(glue::glue(\"{params$out_dir}/{params$proj_name}_raw_obj_list.rds\"))\n"
+    "saveRDS(obj_list, glue::glue(\"{out_dir}/{proj_name}_raw_obj_list.rds\"))\n"
    ]
   },
   {
@@ -150,26 +117,7 @@
     "}\n",
     "print(data)\n",
     "rm(obj_list)\n",
-    "gc()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "55b7b5fa",
-   "metadata": {},
-   "source": [
-    "## General QC visualization\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b65cd56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Idents(data) <- \"sample\"\n",
-    "qcplots(data)\n"
+    "gc() # free up space"
    ]
   },
   {
@@ -191,8 +139,8 @@
     "  ggplot(aes(nCount_RNA)) +\n",
     "    geom_histogram(bins = 100) +\n",
     "    labs(x = \"Library Size (log10(total UMI))\", y = \"Number of Cells\") +\n",
-    "    geom_vline(xintercept = params$min_lib_size, color = \"red\") +\n",
-    "    geom_vline(xintercept = params$max_lib_size, color = \"red\") +\n",
+    "    geom_vline(xintercept = min_lib_size, color = \"red\") +\n",
+    "    geom_vline(xintercept = max_lib_size, color = \"red\") +\n",
     "    scale_x_log10() +\n",
     "    theme_pubr()\n",
     "lib_size_hist2 <- data@meta.data %>%\n",
@@ -200,10 +148,10 @@
     "    geom_histogram(bins = 100) +\n",
     "    scale_x_continuous(limits = c(min(data$nCount_RNA), 100000)) +\n",
     "    labs(x = \"Library Size (total UMI)\", y = \"Number of Cells\") +\n",
-    "    geom_vline(xintercept = params$min_lib_size, color = \"red\") +\n",
-    "    geom_vline(xintercept = params$max_lib_size, color = \"red\") +\n",
+    "    geom_vline(xintercept = min_lib_size, color = \"red\") +\n",
+    "    geom_vline(xintercept = max_lib_size, color = \"red\") +\n",
     "    theme_pubr()\n",
-    "ggarrange(plotlist = list(lib_size_hist1, lib_size_hist2), ncol = 2)\n"
+    "ggarrange(plotlist = list(lib_size_hist1, lib_size_hist2), ncol = 2)"
    ]
   },
   {
@@ -225,16 +173,16 @@
     "  ggplot(aes(nFeature_RNA)) +\n",
     "    geom_histogram(bins = 100) +\n",
     "    labs(x = \"Number of Detected Genes (log10)\", y = \"Number of Cells\") +\n",
-    "    geom_vline(xintercept = params$min_n_genes, color = \"red\") +\n",
-    "    geom_vline(xintercept = params$max_n_genes, color = \"red\") +\n",
+    "    geom_vline(xintercept = min_n_genes, color = \"red\") +\n",
+    "    geom_vline(xintercept = max_n_genes, color = \"red\") +\n",
     "    scale_x_log10() +\n",
     "    theme_pubr()\n",
     "n_genes_hist2 <- data@meta.data %>%\n",
     "  ggplot(aes(nFeature_RNA)) +\n",
     "    geom_histogram(bins = 100) +\n",
     "    #scale_x_continuous(limits = c(0, 1000)) +\n",
-    "    geom_vline(xintercept = params$min_n_genes, color = \"red\") +\n",
-    "    geom_vline(xintercept = params$max_n_genes, color = \"red\") +\n",
+    "    geom_vline(xintercept = min_n_genes, color = \"red\") +\n",
+    "    geom_vline(xintercept = max_n_genes, color = \"red\") +\n",
     "    labs(x = \"Number of Detected Genes\", y = \"Number of Cells\") +\n",
     "    theme_pubr()\n",
     "ggarrange(plotlist = list(n_genes_hist1, n_genes_hist2), ncol = 2)\n"
@@ -264,8 +212,8 @@
     ")\n",
     "n_genes_vs_samples +\n",
     "  labs(title = \"\", x = \"\", y = \"Number of Detected Genes\") +\n",
-    "  geom_hline(yintercept = params$min_n_genes, color = \"red\") +\n",
-    "  geom_hline(yintercept = params$max_n_genes, color = \"red\") +\n",
+    "  geom_hline(yintercept = min_n_genes, color = \"red\") +\n",
+    "  geom_hline(yintercept = max_n_genes, color = \"red\") +\n",
     "  #scale_y_log10() +\n",
     "  theme(legend.position = \"none\",\n",
     "        axis.title = element_text(size = 13))\n"
@@ -289,7 +237,7 @@
     "pct_mt_hist <- data@meta.data %>%\n",
     "  ggplot(aes(percent.mt)) +\n",
     "    geom_histogram(bins = 10) +\n",
-    "    geom_vline(xintercept = params$max_pct_mt, color = \"red\") +\n",
+    "    geom_vline(xintercept = max_pct_mt, color = \"red\") +\n",
     "    #scale_x_continuous(limits = c(0, 100)) +\n",
     "    #scale_y_continuous(limits = c(0, 1000)) +\n",
     "    labs(x = \"% Mitochondrial Expression\", y = \"Number of Cells\") +\n",
@@ -315,7 +263,7 @@
     ")\n",
     "mt_pct_vs_samples +\n",
     "  labs(title = \"\", x = \"\", y = \"% of MT genes\") +\n",
-    "  geom_hline(yintercept = params$max_pct_mt, color = \"red\") +\n",
+    "  geom_hline(yintercept = max_pct_mt, color = \"red\") +\n",
     "  #scale_y_log10() +\n",
     "  theme(legend.position = \"none\",\n",
     "        axis.title = element_text(size = 13))\n"
@@ -356,10 +304,10 @@
     "  labs(x = \"Library Size (total UMI)\", y = \"Number of Detected Genes\") +\n",
     "  theme(legend.position = \"none\", plot.title = element_blank())\n",
     "n_genes_vs_lib_size +\n",
-    "  geom_vline(xintercept = params$min_lib_size, linetype = \"dashed\", color = \"red\") +\n",
-    "  geom_vline(xintercept = params$max_lib_size, linetype = \"dashed\", color = \"red\") +\n",
-    "  geom_hline(yintercept = params$min_n_genes, linetype = \"dashed\", color = \"red\") +\n",
-    "  geom_hline(yintercept = params$max_n_genes, linetype = \"dashed\", color = \"red\")\n"
+    "  geom_vline(xintercept = min_lib_size, linetype = \"dashed\", color = \"red\") +\n",
+    "  geom_vline(xintercept = max_lib_size, linetype = \"dashed\", color = \"red\") +\n",
+    "  geom_hline(yintercept = min_n_genes, linetype = \"dashed\", color = \"red\") +\n",
+    "  geom_hline(yintercept = max_n_genes, linetype = \"dashed\", color = \"red\")\n"
    ]
   },
   {
@@ -381,9 +329,9 @@
     "  labs(x = \"Library Size (total UMI)\", y = \"% Mitochondrial Expression\") +\n",
     "  theme(legend.position = \"none\", plot.title = element_blank())\n",
     "pct_mt_vs_lib_size +\n",
-    "  geom_vline(xintercept = params$min_lib_size, linetype = \"dashed\", color = \"red\") +\n",
-    "  geom_vline(xintercept = params$max_lib_size, linetype = \"dashed\", color = \"red\") +\n",
-    "  geom_hline(yintercept = params$max_pct_mt, linetype = \"dashed\", color = \"red\")\n"
+    "  geom_vline(xintercept = min_lib_size, linetype = \"dashed\", color = \"red\") +\n",
+    "  geom_vline(xintercept = max_lib_size, linetype = \"dashed\", color = \"red\") +\n",
+    "  geom_hline(yintercept = max_pct_mt, linetype = \"dashed\", color = \"red\")\n"
    ]
   },
   {
@@ -401,8 +349,8 @@
     "  scale_y_continuous(trans = \"log10\") + \n",
     "  scale_x_continuous(trans = \"log10\") +\n",
     "  theme_cowplot(12) + \n",
-    "  geom_vline(xintercept = c(params$min_lib_size,params$max_lib_size), linetype = 3) +\n",
-    "  geom_hline(yintercept = c(params$min_n_genes,params$max_n_genes), linetype = 3)\n",
+    "  geom_vline(xintercept = c(min_lib_size,max_lib_size), linetype = 3) +\n",
+    "  geom_hline(yintercept = c(min_n_genes,max_n_genes), linetype = 3)\n",
     "\n",
     "ggMarginal(p, type = \"densigram\", size = 10)\n"
    ]
@@ -423,8 +371,8 @@
     "  scale_x_continuous(trans = \"log10\") + \n",
     "  theme_cowplot(12) + \n",
     "  facet_wrap(~sample, ncol = 2) + \n",
-    "  geom_vline(xintercept = c(params$min_lib_size, params$max_lib_size), linetype = 3) + \n",
-    "  geom_hline(yintercept = c(params$min_n_genes, params$max_n_genes), linetype = 3)\n"
+    "  geom_vline(xintercept = c(min_lib_size, max_lib_size), linetype = 3) + \n",
+    "  geom_hline(yintercept = c(min_n_genes, max_n_genes), linetype = 3)\n"
    ]
   },
   {
@@ -458,10 +406,10 @@
     "  scale_y_continuous(trans = \"log10\") + \n",
     "  scale_x_continuous(trans = \"log10\") +\n",
     "  theme_cowplot(12) + \n",
-    "  geom_vline(xintercept = c(params$min_lib_size,params$max_lib_size), linetype = 3) +\n",
-    "  geom_hline(yintercept = c(params$min_n_genes,params$max_n_genes), linetype = 3)\n",
+    "  geom_vline(xintercept = c(min_lib_size,max_lib_size), linetype = 3) +\n",
+    "  geom_hline(yintercept = c(min_n_genes,max_n_genes), linetype = 3)\n",
     "\n",
-    "ggMarginal(p, type = \"densigram\", size = 10)\n"
+    "ggMarginal(p, type = \"densigram\", size = 10)"
    ]
   },
   {
@@ -480,8 +428,8 @@
     "  scale_x_continuous(trans = \"log10\") + \n",
     "  theme_cowplot(12) + \n",
     "  facet_wrap(~sample, ncol = 2) + \n",
-    "  geom_vline(xintercept = c(params$min_lib_size, params$max_lib_size), linetype = 3) + \n",
-    "  geom_hline(yintercept = c(params$min_n_genes, params$max_n_genes), linetype = 3)\n"
+    "  geom_vline(xintercept = c(min_lib_size, max_lib_size), linetype = 3) +\n",
+    "  geom_hline(yintercept = c(min_n_genes, max_n_genes), linetype = 3)"
    ]
   },
   {
@@ -490,30 +438,6 @@
    "metadata": {},
    "source": [
     "## Filtering\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9df3e5e2",
-   "metadata": {},
-   "source": [
-    "- between `r params$min_lib_size` and `r params$max_lib_size` UMIs per cell\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "28f219f2",
-   "metadata": {},
-   "source": [
-    "- between `r params$min_n_genes` and `r params$max_n_genes` genes\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "744eedaf",
-   "metadata": {},
-   "source": [
-    "- less than `r params$max_pct_mt`% mitochondrial content\n"
    ]
   },
   {
@@ -533,15 +457,15 @@
    "source": [
     "metadata_before_qc <- data@meta.data\n",
     "\n",
-    "is_low_quality <- \n",
-    "  data$nCount_RNA < params$min_lib_size |\n",
-    "  data$nCount_RNA > params$max_lib_size |\n",
-    "  data$nFeature_RNA < params$min_n_genes |\n",
-    "  data$nFeature_RNA > params$max_n_genes |\n",
-    "  data$percent.mt > params$max_pct_mt\n",
+    "is_low_quality <-\n",
+    "  data$nCount_RNA < min_lib_size |\n",
+    "  data$nCount_RNA > max_lib_size |\n",
+    "  data$nFeature_RNA < min_n_genes |\n",
+    "  data$nFeature_RNA > max_n_genes |\n",
+    "  data$percent.mt > max_pct_mt\n",
     "data$keep_cells <- !is_low_quality\n",
     "Idents(data) <- \"keep_cells\"\n",
-    "table(data$keep_cells)\n"
+    "table(data$keep_cells)"
    ]
   },
   {
@@ -551,10 +475,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save objects prior to filtering\n",
     "purrr::map(unique(data$sample), function(s){\n",
-    "  saveRDS(subset(data, sample == s), glue(\"{params$out_dir}/{params$proj_name}_{s}_raw.rds\"))\n",
+    "  saveRDS(subset(data, sample == s), glue(\"{out_dir}/{proj_name}_{s}_raw.rds\"))\n",
     "})\n",
-    "saveRDS(data, glue(\"{params$out_dir}/{params$proj_name}_all_raw.rds\"))\n"
+    "saveRDS(data, glue(\"{out_dir}/{proj_name}_all_raw.rds\"))"
    ]
   },
   {
@@ -564,8 +489,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# filter out flagged cells\n",
     "data <- subset(data, subset = keep_cells == TRUE)\n",
-    "metadata_after_qc <- data@meta.data\n"
+    "metadata_after_qc <- data@meta.data"
    ]
   },
   {
@@ -604,7 +530,7 @@
     "  )\n",
     "qc_table <- left_join(qc_before, qc_after, by = \"sample\")\n",
     "flextable::flextable(qc_table) %>% \n",
-    "  flextable::autofit()\n"
+    "  flextable::autofit()"
    ]
   },
   {
@@ -614,52 +540,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save filtered objects per sample and full object\n",
     "purrr::map(unique(data$sample), function(s){\n",
-    "  saveRDS(subset(data, sample == s), glue(\"{params$out_dir}/{params$proj_name}_{s}_filtered.rds\"))\n",
+    "  saveRDS(subset(data, sample == s), glue(\"{out_dir}/{proj_name}_{s}_filtered.rds\"))\n",
     "})\n",
-    "saveRDS(data, glue(\"{params$out_dir}/{params$proj_name}_all_filtered.rds\"))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b9741877",
-   "metadata": {},
-   "source": [
-    "***\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8140ee14",
-   "metadata": {},
-   "source": [
-    "<a href=\"#top\">Back to top</a>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "333238b3",
-   "metadata": {},
-   "source": [
-    "## Session Info\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6bf680e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sessionInfo()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6eb1a601",
-   "metadata": {},
-   "source": [
-    "<a href=\"#top\">Back to top</a>\n"
+    "saveRDS(data, glue(\"{out_dir}/{proj_name}_all_filtered.rds\"))"
    ]
   }
  ],
